--- a/main.html
+++ b/main.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chained Promises Example</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+
+<html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
+  <body>
     <div class="container">
         <h2>Chained Promises Example</h2>
         <div id="output">Waiting...</div>
